tests/NormalTests/paczka1/fuzzy1/66937772.err
Error in line 5: Ikf2r1w S680 78,6
Error in line 10: sf4fp S1 65,0
Error in line 12: Ikf2r1w S932 97,1
Error in line 17: sf4fp S680 46,7
